Стилизация страницы формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -268,7 +268,7 @@
 
     <!-- Адрес -->
 
-    <section class="contacts">
+    <section class="contacts contacts--background">
       <h2 class="visually-hidden">Контакты для дилеров</h2>
       <div class="contacts__wrapper">
         <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
