Исправления по замечаниям

--- a/source/index.html
+++ b/source/index.html
@@ -147,7 +147,9 @@
           </li>
         </ul>
         <div class="result__total">
-          <p class="result__total-text">Затраты на питание: <span class="result__total-price">15 000 руб.</span></p>
+          <p class="result__total-text">
+            Затраты на питание: <span class="result__total-price">15 000 руб.</span>
+          </p>
         </div>
       </div>
       <div class="result__image">
