--- a/source/catalog.html
+++ b/source/catalog.html
@@ -234,27 +234,27 @@
       <h2 class="additional-products__title heading-secondary">Дополнительные товары</h2>
       <table class="additional-products__parameter">
         <tr>
-          <td>Сахарозаменитель</td>
-          <td>1 упаковка (100 г)</td>
-          <td>200 Р.</td>
+          <td class="additional-products__table-name">Сахарозаменитель</td>
+          <td class="additional-products__table-data">1 упаковка (100 г)</td>
+          <td class="additional-products__table-data">200 Р.</td>
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
         <tr>
-          <td>Питьевая вода</td>
-          <td>5 литров</td>
-          <td>50 Р.</td>
+          <td class="additional-products__table-name">Питьевая вода</td>
+          <td class="additional-products__table-data">5 литров</td>
+          <td class="additional-products__table-data">50 Р.</td>
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
         <tr>
-          <td>Молоко</td>
-          <td>1 литр</td>
-          <td>100 Р.</td>
+          <td  class="additional-products__table-name">Молоко</td>
+          <td class="additional-products__table-data">1 литр</td>
+          <td class="additional-products__table-data">100 Р.</td>
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
         <tr>
-          <td>Витамины</td>
-          <td>1 упаковка (30 г)</td>
-          <td>300 Р.</td>
+          <td  class="additional-products__table-name">Витамины</td>
+          <td class="additional-products__table-data">1 упаковка (30 г)</td>
+          <td class="additional-products__table-data">300 Р.</td>
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
       </table>
