--- a/source/form.html
+++ b/source/form.html
@@ -50,7 +50,7 @@
 
     <form class="form" action="https://echo.htmlacademy.ru" method="get">
 
-      <h3 class="form__title">Заполните анкету, и мы подберем программу питания для вашего кота</h3>
+      <h3 class="form__title">Заполните анкету, и мы подберем программу&nbsp;питания для вашего кота</h3>
 
       <fieldset class="form__field">
         <legend class="visually-hidden">Данные вашего кота</legend>
