--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,9 +51,11 @@
     <section class="catalog">
       <ul class="catalog__list">
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy pro 500 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy pro 500 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/chicken-mimi-m.png" width="68" height="86"
               alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
@@ -75,9 +77,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy pro 1000 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy pro 1000 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/chicken-max-m.png" width="84" height="101"
               alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
@@ -99,9 +103,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy pro 500 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy pro 500 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/fish-mini-m.png" width="68" height="78"
               alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
@@ -123,9 +129,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy pro 1000 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy pro 1000 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/fish-max-m.png" width="84" height="101"
               alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
@@ -147,9 +155,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy slim 500 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy slim 500 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/buckwheat-mini-m.png" width="68" height="78"
               alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
@@ -171,9 +181,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy slim 1000 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy slim 1000 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/buckwheat-max-m.png" width="84" height="100"
               alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
@@ -195,9 +207,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--width" href="#">
-            <h3>Cat Energy slim 500 г</h3>
-          </a>
+          <h3 class="product__title">
+            <a class="product__title-link" href="#">
+              Cat Energy slim 500 г
+            </a>
+          </h3>
           <a class="product__image" href="#">
             <img src="img/product/rice-mini-m.png" width="72" height="84"
               alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
@@ -219,9 +233,11 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title product__title--all">
-            <h3>Показать еще 100500 товаров</h3>
-          </a>
+          <h3 class="product__title-all">
+            <a class="product__title-link" href="#">
+              Показать еще 100500 товаров
+            </a>
+          </h3>
           <p class="product__parameters product__parameters--all">На самом деле вкусов гораздо больше!</p>
           <a class="product__button product__button--all button" href="#">Показать все</a>
         </li>
@@ -246,13 +262,13 @@
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
         <tr>
-          <td  class="additional-products__table-name">Молоко</td>
+          <td class="additional-products__table-name">Молоко</td>
           <td class="additional-products__table-data">1 литр</td>
           <td class="additional-products__table-data">100 Р.</td>
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
         <tr>
-          <td  class="additional-products__table-name">Витамины</td>
+          <td class="additional-products__table-name">Витамины</td>
           <td class="additional-products__table-data">1 упаковка (30 г)</td>
           <td class="additional-products__table-data">300 Р.</td>
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
