--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,7 +24,7 @@
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list">
+        <ul class="main-nav__list main-nav__site-list">
           <li class="main-nav__item main-nav__item--current">
             <a>
               Главная
@@ -46,63 +47,69 @@
 
   <!-- Основное содержание -->
 
-  <main class="page-main center">
+  <main class="page-main">
 
     <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
 
     <section class="promo">
       <div class="promo__wrapper">
-        <h2 class="promo__title heading-primary heading-primary--m-white">
-          Функциональное питание для котов
-        </h2>
-        <p class="promo__slogan promo__slogan--m-white">
-          Занялся собой? Займись котом!
-        </p>
+        <div class="promo__wrapper-desktop">
+          <h2 class="promo__title heading-primary heading-primary--m-white">
+            Функциональное питание для котов
+          </h2>
+          <p class="promo__slogan promo__slogan--m-white">
+            Занялся собой? Займись котом!
+          </p>
+        </div>
+
         <img class="promo__image" src="img/promo-mobile.png" width="280" height="270"
           alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
-        <p class="promo__button-wrapper">
-          <a class="promo__button button" href="form.html">
-            Подобрать программу
-          </a>
-        </p>
       </div>
+      <p class="promo__button-wrapper">
+        <a class="promo__button button" href="form.html">
+          Подобрать программу
+        </a>
+      </p>
+
     </section>
 
     <!-- Программы питания -->
 
-    <section class="select-programm select-programm--image-skinny">
-      <div class="select-programm__wrapper">
-        <h3 class="select-programm__title">Похудение</h3>
-        <p class="select-programm__description">
-          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim
-          поможет вашему питомцу сбросить лишний вес.
-        </p>
-        <a class="select-programm__link" href="#">
-          Каталог slim
-        </a>
-      </div>
-    </section>
-    <section class="select-programm select-programm--image-weight">
-      <div class="select-programm__wrapper">
-        <h3 class="select-programm__title">Набор массы</h3>
-        <p class="select-programm__description">
-          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
-          необходимые мышцы!
-        </p>
-        <a class="select-programm__link" href="#">
-          Каталог pro
-        </a>
-      </div>
-    </section>
+    <div class="select-programm-wrapper">
+      <section class="select-programm select-programm--image-skinny">
+        <div class="select-programm__wrapper-block">
+          <h3 class="select-programm__title">Похудение</h3>
+          <p class="select-programm__description">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim
+            поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="select-programm__link" href="#">
+            Каталог slim
+          </a>
+        </div>
+      </section>
+      <section class="select-programm select-programm--image-weight">
+        <div class="select-programm__wrapper-block">
+          <h3 class="select-programm__title">Набор массы</h3>
+          <p class="select-programm__description">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
+            необходимые мышцы!
+          </p>
+          <a class="select-programm__link" href="#">
+            Каталог pro
+          </a>
+        </div>
+      </section>
+    </div>
 
     <!-- Описание работы программы питания -->
 
     <section class="application">
-      <div class="application__wrapper">
+      <div class="application__wrapper center">
         <h2 class="application__title heading-primary">
           Как это работает
         </h2>
-        <ul class="application__list">
+        <ol class="application__list">
           <li class="application__item application__item--leaf">
             <p class="application__description">
               Функциональное питание содержит только полезные питательные вещества.
@@ -120,10 +127,10 @@
           </li>
           <li class="application__item application__item--clock">
             <p class="application__description">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!
             </p>
           </li>
-        </ul>
+        </ol>
       </div>
     </section>
 
@@ -136,28 +143,32 @@
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
           изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
-        <ul class="result__list">
-          <li class="result__item">
-            <p class="result__item-info">5 кг</p>
-            <p class="result__item-info-caption">Снижение <br>веса</p>
-          </li>
-          <li class="result__item">
-            <p class="result__item-info">60 дней</p>
-            <p class="result__item-info-caption">Затрачено времени</p>
-          </li>
-        </ul>
-        <div class="result__total">
-          <p class="result__total-text">
-            Затраты на питание: <span class="result__total-price">15 000 руб.</span>
-          </p>
+        <div class="result__wrapper-box-list">
+          <ul class="result__list">
+            <li class="result__item">
+              <p class="result__item-info">5 кг</p>
+              <p class="result__item-info-caption">Снижение <br>веса</p>
+            </li>
+            <li class="result__item">
+              <p class="result__item-info">60 дней</p>
+              <p class="result__item-info-caption">Затрачено времени</p>
+            </li>
+          </ul>
+          <div class="result__total">
+            <p class="result__total-text">
+              Затраты на питание: <span class="result__total-price">15 000 руб.</span>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="result__image">
-        <div class="result__image-before">
-          <img src="img/cat-before.png" width="311" height="232" alt="Изображение упитанного кота">
-        </div>
-        <div class="result__image-after">
-          <img src="img/cat-after.png" width="251" height="240" alt="Изображение худого кота">
+      <div class="result__image-box">
+        <div class="result__image">
+          <div class="result__image-before">
+            <img src="img/cat-before.png" width="311" height="232" alt="Изображение упитанного кота">
+          </div>
+          <div class="result__image-after">
+            <img src="img/cat-after.png" width="251" height="240" alt="Изображение худого кота">
+          </div>
         </div>
         <div class="result__toggles">
           <button class="result__toggle-before">Было</button>
