--- a/source/index.html
+++ b/source/index.html
@@ -10,72 +10,77 @@
 
 <body class="page__body">
   <header class="page-header">
+    <div class="page-header__box container">
+      <div class="page-header__wrapper">
+        <!-- Логотип -->
 
-    <!-- Логотип -->
+        <div class="page-header__log">
+          <a class="page-header__logo-icon">
+            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+          </a>
+        </div>
 
-    <div class="page-header__logo">
-      <a class="page-header__logo-icon">
-        <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
-      </a>
-    </div>
+        <!-- Навигация -->
 
-    <!-- Навигация -->
-
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list main-nav__site-list">
-          <li class="main-nav__item main-nav__item--current">
-            <a>
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
+        <nav class="main-nav main-nav--closed main-nav--nojs">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list main-nav__site-list">
+              <li class="main-nav__item main-nav__item--current">
+                <a>
+                  Главная
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="catalog.html">
+                  Каталог продукции
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="form.html">
+                  Подбор программы
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </nav>
+
+      <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
+
+      <section class="promo">
+        <div class="promo__wrapper">
+          <div class="promo__wrapper-desktop">
+            <h2 class="promo__title heading-primary heading-primary--m-white">
+              Функциональное питание&nbsp;для котов
+            </h2>
+            <p class="promo__slogan promo__slogan--m-white">
+              Занялся собой? Займись котом!
+            </p>
+          </div>
+
+          <img class="promo__image" src="img/promo-mobile.png" width="280" height="270"
+            alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
+
+          <p class="promo__button-wrapper">
+            <a class="promo__button button" href="form.html">
+              Подобрать программу
+            </a>
+          </p>
+        </div>
+      </section>
+    </div>
   </header>
 
   <!-- Основное содержание -->
 
   <main class="page-main">
 
-    <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
 
-    <section class="promo">
-      <div class="promo__wrapper">
-        <div class="promo__wrapper-desktop">
-          <h2 class="promo__title heading-primary heading-primary--m-white">
-            Функциональное питание для котов
-          </h2>
-          <p class="promo__slogan promo__slogan--m-white">
-            Занялся собой? Займись котом!
-          </p>
-        </div>
-
-        <img class="promo__image" src="img/promo-mobile.png" width="280" height="270"
-          alt="Изображение товара со вкусом курицы в упаковке из стаканчика желто-оранжевой расцветки">
-      </div>
-      <p class="promo__button-wrapper">
-        <a class="promo__button button" href="form.html">
-          Подобрать программу
-        </a>
-      </p>
-
-    </section>
 
     <!-- Программы питания -->
 
-    <div class="select-programm-wrapper">
+    <div class="select-programm-wrapper container">
       <section class="select-programm select-programm--image-skinny">
         <div class="select-programm__wrapper-block">
           <h3 class="select-programm__title">Похудение</h3>
@@ -104,8 +109,8 @@
 
     <!-- Описание работы программы питания -->
 
-    <section class="application">
-      <div class="application__wrapper center">
+    <section class="application container">
+      <div class="application__wrapper">
         <h2 class="application__title heading-primary">
           Как это работает
         </h2>
@@ -137,49 +142,52 @@
     <!-- Блок с результатом -->
 
     <section class="result">
-      <div class="result__wrapper">
-        <h2 class="result__title heading-primary">Живой пример</h2>
-        <p class="result__description">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="result__wrapper-box-list">
-          <ul class="result__list">
-            <li class="result__item">
-              <p class="result__item-info">5 кг</p>
-              <p class="result__item-info-caption">Снижение <br>веса</p>
-            </li>
-            <li class="result__item">
-              <p class="result__item-info">60 дней</p>
-              <p class="result__item-info-caption">Затрачено времени</p>
-            </li>
-          </ul>
-          <div class="result__total">
-            <p class="result__total-text">
-              Затраты на питание: <span class="result__total-price">15 000 руб.</span>
-            </p>
+      <div class="result__wrapper container">
+        <div class="result__wrapper-info">
+          <h2 class="result__title heading-primary">Живой пример</h2>
+          <p class="result__description">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="result__wrapper-list">
+            <ul class="result__list">
+              <li class="result__item">
+                <p class="result__item-info">5 кг</p>
+                <p class="result__item-info-caption">Снижение <br>веса</p>
+              </li>
+              <li class="result__item">
+                <p class="result__item-info">60 дней</p>
+                <p class="result__item-info-caption">Затрачено времени</p>
+              </li>
+            </ul>
+            <div class="result__total">
+              <p class="result__total-text">
+                Затраты на питание: <span class="result__total-price">15 000 руб.</span>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="result__image-box">
-        <div class="result__image">
-          <div class="result__image-before">
-            <img src="img/cat-before.png" width="311" height="232" alt="Изображение упитанного кота">
+
+        <div class="result__image-box">
+          <div class="result__image">
+            <div class="result__image-before">
+              <img src="img/cat-before.png" width="311" height="232" alt="Изображение упитанного кота">
+            </div>
+            <div class="result__image-after">
+              <img src="img/cat-after.png" width="251" height="240" alt="Изображение худого кота">
+            </div>
           </div>
-          <div class="result__image-after">
-            <img src="img/cat-after.png" width="251" height="240" alt="Изображение худого кота">
+          <div class="result__toggles">
+            <button class="result__toggle-before">Было</button>
+            <button class="result__toggle-after">Стало</button>
           </div>
-        </div>
-        <div class="result__toggles">
-          <button class="result__toggle-before">Было</button>
-          <button class="result__toggle-after">Стало</button>
         </div>
       </div>
     </section>
 
     <!-- Адрес -->
 
-    <section class="contacts">
+    <section class="contacts container">
       <h2 class="visually-hidden">Контакты для дилеров</h2>
       <div class="contacts__wrapper">
         <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
@@ -205,16 +213,16 @@
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
+    <div class="page-footer__wrapper container">
 
-      <div class="page-footer__logo-text">
+      <div class="page-footer__col-1">
         <h3 class="visually-hidden">Логотип текст Кэт энэрджи</h3>
         <a href="#">
           <img src="img/svg/footer-logo-text.svg" width="128" height="24" alt="Логотип текст Кэт энэрджи">
         </a>
       </div>
 
-      <div class="page-footer__social social">
+      <div class="page-footer__col-2 social">
         <h3 class="visually-hidden">Мы в социальных сетях</h3>
         <ul class="social__list">
           <li class="social__item">
@@ -235,7 +243,7 @@
         </ul>
       </div>
 
-      <div class="page-footer__copyright copyright">
+      <div class="page-footer__col-3 copyright">
         <h3 class="visually-hidden">Разработчик сайта</h3>
         <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
@@ -244,7 +252,6 @@
       </div>
 
     </div>
-
   </footer>
 
 </body>
