--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,9 +13,10 @@
   <header class="page-header">
     <div class="page-header__box container">
       <div class="page-header__wrapper">
+
         <!-- Логотип -->
 
-        <div class="page-header__log">
+        <div class="page-header__logo">
           <a class="page-header__logo-icon">
             <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
           </a>
@@ -49,6 +51,7 @@
       <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
 
       <section class="promo">
+        <div class="promo-bg"></div>
         <div class="promo__wrapper">
           <div class="promo__wrapper-desktop">
             <h2 class="promo__title heading-primary heading-primary--m-white">
@@ -75,8 +78,6 @@
   <!-- Основное содержание -->
 
   <main class="page-main">
-
-
 
     <!-- Программы питания -->
 
