--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,47 +9,51 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
+  <header class="page-header page-header--inner-form">
+    <div class="page-header__box container">
+      <div class="page-header__wrapper">
 
-    <!-- Логотип -->
+        <!-- Логотип -->
 
-    <div class="page-header__logo">
-      <a class="page-header__logo-icon" href="index.html">
-        <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
-      </a>
-    </div>
+        <div class="page-header__logo">
+          <a class="page-header__logo-icon" href="index.html">
+            <img src="img/svg/logo-mobile.svg" width="191" height="38" alt="Логотип Кэт энэрджи">
+          </a>
+        </div>
 
-    <!-- Навигация -->
+        <!-- Навигация -->
 
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item main-nav__item--current">
-            <a>
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
+        <nav class="main-nav main-nav--closed main-nav--nojs">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list main-nav__site-list">
+              <li class="main-nav__item main-nav__item-inner">
+                <a href="index.html">
+                  Главная
+                </a>
+              </li>
+              <li class="main-nav__item main-nav__item-inner">
+                <a>
+                  Каталог продукции
+                </a>
+              </li>
+              <li class="main-nav__item main-nav__item-inner main-nav__item--current">
+                <a href="form.html">
+                  Подбор программы
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </nav>
+    </div>
   </header>
 
   <main class="page-main">
 
-    <h1 class="heading-primary">Каталог продукции</h1>
+    <h1 class="heading-primary container">Каталог продукции</h1>
 
-    <section class="catalog">
+    <section class="catalog container">
       <ul class="catalog__list">
         <li class="catalog__item product">
           <h3 class="product__title">
@@ -233,67 +237,72 @@
           </table>
           <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog__item product">
+        <li class="catalog__item product product--all">
           <h3 class="product__title-all">
             <a class="product__title-link" href="#">
               Показать еще 100500 товаров
             </a>
           </h3>
           <p class="product__parameters product__parameters--all">На самом деле вкусов гораздо больше!</p>
-          <a class="product__button product__button--all button" href="#">Показать все</a>
+          <a class="button product__button product__button--all" href="#">Показать все</a>
         </li>
       </ul>
     </section>
 
     <!-- Дополнительные товары -->
 
-    <section class="additional-products">
+    <section class="additional-products container">
       <h2 class="additional-products__title heading-secondary">Дополнительные товары</h2>
-      <table class="additional-products__parameter">
-        <tr>
-          <td class="additional-products__table-name">Сахарозаменитель</td>
-          <td class="additional-products__table-data">1 упаковка (100 г)</td>
-          <td class="additional-products__table-data">200 Р.</td>
-          <td><a class="additional-products__button button" href="#">Заказать</a></td>
-        </tr>
-        <tr>
-          <td class="additional-products__table-name">Питьевая вода</td>
-          <td class="additional-products__table-data">5 литров</td>
-          <td class="additional-products__table-data">50 Р.</td>
-          <td><a class="additional-products__button button" href="#">Заказать</a></td>
-        </tr>
-        <tr>
-          <td class="additional-products__table-name">Молоко</td>
-          <td class="additional-products__table-data">1 литр</td>
-          <td class="additional-products__table-data">100 Р.</td>
-          <td><a class="additional-products__button button" href="#">Заказать</a></td>
-        </tr>
-        <tr>
-          <td class="additional-products__table-name">Витамины</td>
-          <td class="additional-products__table-data">1 упаковка (30 г)</td>
-          <td class="additional-products__table-data">300 Р.</td>
-          <td><a class="additional-products__button button" href="#">Заказать</a></td>
-        </tr>
-      </table>
+      <div class="additional-products__wrapper">
+        <table class="additional-products__parameter">
+          <tr>
+            <td class="additional-products__table-name">Сахарозаменитель</td>
+            <td class="additional-products__table-data">1 упаковка (100 г)</td>
+            <td class="additional-products__table-data">200 Р.</td>
+            <td><a class="additional-products__button button" href="#">Заказать</a></td>
+          </tr>
+          <tr>
+            <td class="additional-products__table-name">Питьевая вода</td>
+            <td class="additional-products__table-data">5 литров</td>
+            <td class="additional-products__table-data">50 Р.</td>
+            <td><a class="additional-products__button button" href="#">Заказать</a></td>
+          </tr>
+          <tr>
+            <td class="additional-products__table-name">Молоко</td>
+            <td class="additional-products__table-data">1 литр</td>
+            <td class="additional-products__table-data">100 Р.</td>
+            <td><a class="additional-products__button button" href="#">Заказать</a></td>
+          </tr>
+          <tr>
+            <td class="additional-products__table-name">Витамины</td>
+            <td class="additional-products__table-data">1 упаковка (30 г)</td>
+            <td class="additional-products__table-data">300 Р.</td>
+            <td><a class="additional-products__button button" href="#">Заказать</a></td>
+          </tr>
+        </table>
 
-      <!-- Бонус -->
-      <div class="additional-products__bonus">
-        <a class="additional-products__bonus-link" href="#">Закажите все и получите чехол для кота в подарок!</a>
+        <!-- Бонус -->
+        <div class="additional-products__bonus">
+          <a class="additional-products__bonus-link" href="#">Закажите все и&nbsp;получите чехол для кота в подарок!
+          </a>
+        </div>
       </div>
-
     </section>
 
     <!-- Адрес -->
 
-    <section class="contacts contacts--background">
-      <h2 class="visually-hidden">Контакты для дилеров</h2>
-      <div class="contacts__wrapper">
-        <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-        <address class="contacts__address">
-          ул. Большая Конюшенная, д. 19/8 <span class="contacts__address-city">Санкт-Петербург</span>
-        </address>
-      </div>
-    </section>
+    <div class="contacts-background">
+      <section class="contacts container container--padding">
+        <h2 class="visually-hidden">Контакты для дилеров</h2>
+        <div class="contacts__wrapper">
+          <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
+          <address class="contacts__address">
+            ул. Большая Конюшенная, д. 19/8 <span class="contacts__address-city">Санкт-Петербург</span>
+          </address>
+
+        </div>
+      </section>
+    </div>
 
     <!-- Карта -->
 
@@ -310,16 +319,16 @@
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
+    <div class="page-footer__wrapper container">
 
-      <div class="page-footer__logo-text">
+      <div class="page-footer__col-1">
         <h3 class="visually-hidden">Логотип текст Кэт энэрджи</h3>
         <a href="index.html">
           <img src="img/svg/footer-logo-text.svg" width="128" height="24" alt="Логотип текст Кэт энэрджи">
         </a>
       </div>
 
-      <div class="page-footer__social social">
+      <div class="page-footer__col-2 social">
         <h3 class="visually-hidden">Мы в социальных сетях</h3>
         <ul class="social__list">
           <li class="social__item">
@@ -340,7 +349,7 @@
         </ul>
       </div>
 
-      <div class="page-footer__copyright copyright">
+      <div class="page-footer__col-3 copyright">
         <h3 class="visually-hidden">Разработчик сайта</h3>
         <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
@@ -349,7 +358,6 @@
       </div>
 
     </div>
-
   </footer>
 
 </body>
