Исправления по сеткам внутренних страниц

--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,8 @@
 
 <body class="page__body">
   <header class="page-header">
-    <div class="page-header__box container">
-      <div class="page-header__wrapper">
+    <!-- <div class="page-header__box"> -->
+      <div class="page-header__wrapper container">
 
         <!-- Логотип -->
 
@@ -22,37 +22,40 @@
           </a>
         </div>
 
+
         <!-- Навигация -->
 
         <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list main-nav__site-list">
-              <li class="main-nav__item main-nav__item--current">
-                <a>
-                  Главная
-                </a>
-              </li>
-              <li class="main-nav__item">
-                <a href="catalog.html">
-                  Каталог продукции
-                </a>
-              </li>
-              <li class="main-nav__item">
-                <a href="form.html">
-                  Подбор программы
-                </a>
-              </li>
-            </ul>
-          </div>
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+            <div class="main-nav__wrapper container-nav">
+              <ul class="main-nav__list main-nav__site-list">
+                <li class="main-nav__item main-nav__item--current">
+                  <a>
+                    Главная
+                  </a>
+                </li>
+                <li class="main-nav__item">
+                  <a href="catalog.html">
+                    Каталог продукции
+                  </a>
+                </li>
+                <li class="main-nav__item">
+                  <a href="form.html">
+                    Подбор программы
+                  </a>
+                </li>
+              </ul>
+            </div>
         </nav>
       </div>
+
 
       <h1 class="visually-hidden">Кэт энэрджи - интернет-магазин функционального питания для котов</h1>
 
       <section class="promo">
-        <div class="promo-bg"></div>
-        <div class="promo__wrapper">
+        <div class="promo__wrapper container">
           <div class="promo__wrapper-desktop">
             <h2 class="promo__title heading-primary heading-primary--m-white">
               Функциональное питание&nbsp;для котов
@@ -72,7 +75,7 @@
           </p>
         </div>
       </section>
-    </div>
+    <!-- </div> -->
   </header>
 
   <!-- Основное содержание -->
